fixing bottom bar issue on IOS mobile

--- a/src/components/chat/screens/components/ChatArea.css
+++ b/src/components/chat/screens/components/ChatArea.css
@@ -526,9 +526,11 @@
   }
 
   .input-bar {
-    /* position: fixed; */
-    bottom: 0;
-    /* padding-bottom: 25px; */
+    position: fixed;
+    bottom: 50px;
+    left: 50%;
+    padding-bottom: 25px;
+    transform: translateX(-50%);
     width: 100%;
     background-color: #1d1d1d;
     z-index: 1000;
